# pyS99

./: .gitignore  README.md  main.py  pyproject.toml
data/: logSFC-CCFid.txt  logSFC-high1.txt  logSFC-low1.txt  logSFCHe19.txt  output_z3.txt
data/log_fsHRG19_20230607/: logSFC_1Dprof  namelist.nml
nbs_etc/: Fitser_v2.py  adding_specs_v2.ipynb  ashiq_spec.py  ashiq_spec_3-30.ipynb  line_maker.py  lum_comp.py  sed_cont_sim.py  sed_continuum.py  sim_load.py  sim_view.ipynb  slit_projection.ipynb  spring_final_plot.ipynb  sunrise.ipynb
silmaril/: pyproject.toml
